// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webpack \`combine-assets\` should produce expected output: Asset file should match snapshot 1`] = `"<?php return array('fileA.js' => array('dependencies' => array('lodash', 'wp-blob'), 'version' => '7f20d539c102574a8c3cc633da696414'), 'fileB.js' => array('dependencies' => array('wp-token-list'), 'version' => 'cd819cf8e36631f571b900e26fbdaa33'));"`;

exports[`Webpack \`combine-assets\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "tokenList",
    ],
    "userRequest": "@wordpress/token-list",
  },
]
`;

exports[`Webpack \`dynamic-import\` should produce expected output: Asset file should match snapshot 1`] = `"<?php return array('dependencies' => array('lodash', 'wp-blob'), 'version' => '8238bb8d8105f290c306985d0a80e620');"`;

exports[`Webpack \`dynamic-import\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`Webpack \`function-output-filename\` should produce expected output: Asset file should match snapshot 1`] = `"<?php return array('dependencies' => array('lodash', 'wp-blob'), 'version' => '20ccfde2a0bda0de303697b6394bcdaf');"`;

exports[`Webpack \`function-output-filename\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`Webpack \`has-extension-suffix\` should produce expected output: Asset file should match snapshot 1`] = `"<?php return array('dependencies' => array('lodash', 'wp-blob'), 'version' => 'c98f151b4b78213bcf34e944d0570e64');"`;

exports[`Webpack \`has-extension-suffix\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`Webpack \`no-default\` should produce expected output: Asset file should match snapshot 1`] = `"<?php return array('dependencies' => array(), 'version' => '94de0b057342dd5e269e81470c6bd7ad');"`;

exports[`Webpack \`no-default\` should produce expected output: External modules should match snapshot 1`] = `Array []`;

exports[`Webpack \`no-deps\` should produce expected output: Asset file should match snapshot 1`] = `"<?php return array('dependencies' => array(), 'version' => '6621f8eb7beae06e54bac7541ff6301d');"`;

exports[`Webpack \`no-deps\` should produce expected output: External modules should match snapshot 1`] = `Array []`;

exports[`Webpack \`output-format-json\` should produce expected output: Asset file should match snapshot 1`] = `"{\\"dependencies\\":[\\"lodash\\"],\\"version\\":\\"ba98db09597b86492351c74cd0aaaf62\\"}"`;

exports[`Webpack \`output-format-json\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
]
`;

exports[`Webpack \`overrides\` should produce expected output: Asset file should match snapshot 1`] = `"<?php return array('dependencies' => array('wp-blob', 'wp-script-handle-for-rxjs', 'wp-url'), 'version' => '4d7a5e69acf5a598e78582c96ab137f5');"`;

exports[`Webpack \`overrides\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "rxjs",
    "userRequest": "rxjs",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "rxjs",
      "operators",
    ],
    "userRequest": "rxjs/operators",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "url",
    ],
    "userRequest": "@wordpress/url",
  },
]
`;

exports[`Webpack \`wordpress\` should produce expected output: Asset file should match snapshot 1`] = `"<?php return array('dependencies' => array('lodash', 'wp-blob'), 'version' => '20ccfde2a0bda0de303697b6394bcdaf');"`;

exports[`Webpack \`wordpress\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`Webpack \`wordpress-require\` should produce expected output: Asset file should match snapshot 1`] = `"<?php return array('dependencies' => array('lodash', 'wp-blob'), 'version' => '2ef8a0fe415e9b5bfb28b37ec06f2e91');"`;

exports[`Webpack \`wordpress-require\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;
